test/libhyperion/syntaxTests/inlineAssembly/assembly_dialect_leading_space.hyp
function f() pure {
    assembly " qrvmasm" {}
}
// ----
// ParserError 4531: (33-42): Only "qrvmasm" supported.
